# quickpeach-vault-core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/security/: kdf-audit-iter-ttt.md
docs/spec/: vault-core-v1.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_decode_envelope.rs  fuzz_recovery_parse.rs  fuzz_seal_open_round_trip.rs
src/: crypto.rs  format.rs  lib.rs  manifest.rs  protocol.rs  recovery.rs
src/primitives/: aead.rs  kdf.rs  mod.rs
tests/: compat_fixtures.rs  cross_implementation.rs  crypto_adversarial.rs  file_crypto.rs  generate_compat_fixtures.rs  kdf_param_audit.rs  key_derivation.rs  manifest_integrity.rs  properties.rs  recovery_adversarial.rs  security_properties.rs
tests/fixtures/: sample.md  sample.txt
tests/fixtures/compat/: derivations-v1.json  envelope-v1.json  envelope-with-aad-v1.json  manifest-v1.json  recovery-bundle-v1.json
