[package]
name = "peachnote-vault-core"
version = "0.1.1"
edition = "2021"
rust-version = "1.72"
description = "QuickPeach Vault Core: shared vault format, manifest, and encryption primitives"
license = "MIT"
repository = "https://github.com/Quickpeach/quickpeach-vault-core"
homepage = "https://github.com/Quickpeach/quickpeach-vault-core"
documentation = "https://docs.rs/peachnote-vault-core"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
bip39 = { version = "2", default-features = false, features = ["std"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2.0"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
hex-literal = "0.4"
